# TSDataset

./: .env.example  .gitignore  README.md  pyproject.toml
src/: bug.json  bug_injector.py  bug_intro.json  bugs.json  config.py  conversation_generator.py  generate_dataset.py  opencode_client.py  test_setup.py  test_validators.py  user_simulator.py  validators.py
